@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210212"
-#define public MagickPackageReleaseDate "snapshot-20210212"
+#define public MagickPackageVersionAddendum ".020210214"
+#define public MagickPackageReleaseDate "snapshot-20210214"
