@@ -148,11 +148,7 @@ available as</p>
 </li>
 <li><p class="first">GraphicsMagick requires Ghostscript software available from</p>
 <blockquote>
-<p><a class="reference external" href="http://pages.cs.wisc.edu/~ghost/">http://pages.cs.wisc.edu/~ghost/</a></p>
-<blockquote>
-<p>or</p>
-</blockquote>
-<p><a class="reference external" href="http://sourceforge.net/projects/ghostscript/">http://sourceforge.net/projects/ghostscript/</a></p>
+<p><a class="reference external" href="https://www.ghostscript.com/download.html">https://www.ghostscript.com/download.html</a></p>
 </blockquote>
 <p>to read the Postscript or the Portable Document Format (PDF).</p>
 <p>Ghostscript Fonts (also known as &quot;URW Standard postscript fonts
